# 3DShop

./: .flake8  .gitignore  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 31a14620b61c_.py  4e3ff75c1310_.py  7242d1ea878c_initial_migration.py  7f4a813d3d77_.py  965cc8060edd_.py  b5baa9d047dc_initial_migration.py  cc6df1260528_.py  e66453f9e8cd_.py  f70e07b0b6ce_.py
api/v1/: auth.py  category.py  product.py
api/v1/router/: auth.py
config/: setting.py  settings.py
controller/: auth.py  category.py  product.py
core/: build.py  setup.py
cron/: __init__.py  config.py
models/: __init__.py  cart.py  cart_item.py  category.py  customer.py  database_models.py  order.py  orderitem.py  product.py  product_image.py  user.py
schemas/: category.py  customer.py  product.py  token.py  user.py
tools/: kafka.py  keycloak.py  log.py
utils/: auth_services.py  checker.py  session.py  sql.py
