[tool.poetry]
name = "3dshop"
version = "0.1.0"
description = ""
authors = ["Pinto Tetteh Aaron <aaronpinto111@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.1"
alembic = "^1.13.1"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
flake8 = "^7.0.0"
uvicorn = "^0.29.0"
kafka-python = "^2.0.2"
bcrypt = "^4.1.2"
passlib = {extras = ["cryptography"], version = "^1.7.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
